--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-beautifulsoup4==4.9.3
-Flask==2.0.2
-googlesearch_python==1.0.1
 numpy==1.22.0
+scipy==1.7.3
+scikit-learn==1.0.1
 pandas==1.3.4
+Flask==2.0.2
+beautifulsoup4==4.9.3
 python_dateutil==2.8.2
 requests==2.25.1
-scikit_learn==1.0.1
-scipy==1.7.3
+googlesearch_python==1.0.1
