--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ Flask==2.0.2
 googlesearch_python==1.0.1
 numpy==1.21.4
 pandas==1.3.4
+scipy==1.9.3
 python_dateutil==2.8.2
 requests==2.25.1
 scikit_learn==1.0.1
